--- a/catelog/catelog-application-service/pom.xml
+++ b/catelog/catelog-application-service/pom.xml
@@ -42,6 +42,10 @@
             <groupId>org.springdoc</groupId>
             <artifactId>springdoc-openapi-ui</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.github.javafaker</groupId>
+            <artifactId>javafaker</artifactId>
+        </dependency>
 
     </dependencies>
 
