--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,7 @@
         <spring-boot-version>2.7.10</spring-boot-version>
         <lombok.version>1.18.24</lombok.version>
         <springdoc-openapi-ui.version>1.5.12</springdoc-openapi-ui.version>
+        <javafaker.version>1.0.2</javafaker.version>
     </properties>
     <dependencyManagement>
         <dependencies>
@@ -46,6 +47,11 @@
                 <groupId>org.springdoc</groupId>
                 <artifactId>springdoc-openapi-ui</artifactId>
                 <version>${springdoc-openapi-ui.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>com.github.javafaker</groupId>
+                <artifactId>javafaker</artifactId>
+                <version>${javafaker.version}</version>
             </dependency>
 
 
